Launch 8.18.16 (overflow correct)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -211,7 +211,6 @@
     body {
         padding: 0 0 0 0;
         margin: 0 0 0 0;
-        overflow-x: hidden;
     }
 
     p {
@@ -220,6 +219,11 @@
 
     div {
         line-height: 0;
+    }
+    
+    #overflow-wrapper {
+        position: relative;
+        overflow: hidden;
     }
     
     #cover-mobile {
